fixed broken styles

--- a/css/main.scss
+++ b/css/main.scss
@@ -187,6 +187,8 @@ main p {
 .featured > .featured-picture {
   width: 15em;
   padding: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .featured > .featured-picture > img {
